--- a/.forceignore
+++ b/.forceignore
@@ -8,5 +8,8 @@ package.xml
 **/jsconfig.json
 **/.eslintrc.json
 
-# LWC Jest
+# LWC Jest` 
 **/__tests__/**
+
+# Do not track profile metadata
+**/profiles/*
